Stop-gap measure to make sure checkboxes can be used.
A better solution would deal with short heights better; I'll
put that off until later.

--- a/deity/wogdeity.css
+++ b/deity/wogdeity.css
@@ -45,6 +45,7 @@ label {
 }
 label > input {
 	margin-right: 0.5em;
+	z-index:	2;
 }
 
 
